# KMeans

./: main.c
Bloom-Filter/: Bloom Filter - Presentation.pptx  Bloom Filter - Presentazione (1).pptx
Bloom-Filter/BloomFilterParallel/: main.py
Bloom-Filter/BloomFilterParallel/cache/joblib/__main__-C%3A-Users-HP-PycharmProjects-BloomFilterParallel-main/checkElement/: func_code.py
Bloom-Filter/BloomFilterParallel/cache/joblib/__main__-C%3A-Users-HP-PycharmProjects-BloomFilterParallel-main/checkElement/038741b8deeb5aebc7fd6b7834718d71/: metadata.json
Bloom-Filter/BloomFilterParallel/cache/joblib/__main__-C%3A-Users-HP-PycharmProjects-BloomFilterParallel-main/checkElement/0648e6fb319918a81a7bc8b499e95b29/: metadata.json
Bloom-Filter/BloomFilterParallel/cache/joblib/__main__-C%3A-Users-HP-PycharmProjects-BloomFilterParallel-main/checkElement/0798c5a59552ed220d2a6618adb77897/: metadata.json
Bloom-Filter/BloomFilterParallel/cache/joblib/__main__-C%3A-Users-HP-PycharmProjects-BloomFilterParallel-main/checkElement/091da5b724bde187f0c4da61a039b1e9/: metadata.json
Bloom-Filter/BloomFilterParallel/cache/joblib/__main__-C%3A-Users-HP-PycharmProjects-BloomFilterParallel-main/checkElement/0924ac8a98933b96076c8599f58226f4/: metadata.json
Bloom-Filter/BloomFilterSequential/: main.py  test.py
K-Means/KMeans-Parallel/: CMakeLists.txt  main.c
K-Means/KMeans-Sequential/: CMakeLists.txt  main.c
KMeans-Sequential/: CMakeLists.txt  main.c
(+95 files in other folders)
